--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,118 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".MainActivity">
+
+  <ImageView
+    android:id="@+id/background_image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:contentDescription="@null"
+    android:scaleType="centerCrop" />
 
-    <ImageView
-        android:id="@+id/background_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@null"
-        android:scaleType="centerCrop"/>
+  <FrameLayout
+    android:id="@+id/toolbar_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/toolbar_background_gradient"
+    android:fitsSystemWindows="true">
+
+    <android.support.v7.widget.Toolbar
+      android:id='@+id/toolbar'
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="@android:color/transparent"
+      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+  </FrameLayout>
+
+  <design.shapeshifter.nestedscrolling.CustomNestedScrollView2
+    android:id='@+id/nestedscrollview'
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="design.shapeshifter.nestedscrolling.CustomBehavior">
 
     <FrameLayout
-        android:id="@+id/toolbar_container"
+      android:id="@+id/card_container"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="24dp"
+      android:layout_marginRight="24dp"
+      android:descendantFocusability="blocksDescendants">
+
+      <android.support.v7.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:background="@drawable/toolbar_background_gradient">
+        app:cardCornerRadius="2dp">
 
-        <android.support.v7.widget.Toolbar
-            android:id='@+id/toolbar'
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/transparent"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-    </FrameLayout>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
 
-    <design.shapeshifter.nestedscrolling.CustomNestedScrollView2
-        android:id='@+id/nestedscrollview'
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="design.shapeshifter.nestedscrolling.CustomBehavior">
-
-        <FrameLayout
-            android:id="@+id/card_container"
+          <TextView
+            android:id="@+id/card_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="24dp"
-            android:descendantFocusability="blocksDescendants">
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingBottom="4dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="16dp"
+            android:text="Title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/cardview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="2dp">
+          <TextView
+            android:id="@+id/card_subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingBottom="8dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:text="Subtitle"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+          <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/card_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="16dp"
-                        android:paddingLeft="24dp"
-                        android:paddingRight="24dp"
-                        android:paddingBottom="4dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="Title"/>
+            <design.shapeshifter.nestedscrolling.MaxHeightRecyclerView
+              android:id="@+id/card_recyclerview"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content" />
 
-                    <TextView
-                        android:id="@+id/card_subtitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="24dp"
-                        android:paddingRight="24dp"
-                        android:paddingBottom="8dp"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:text="Subtitle"/>
+            <View
+              android:id="@+id/card_header_shadow"
+              android:layout_width="match_parent"
+              android:layout_height="6dp"
+              android:alpha="0"
+              android:background="@drawable/toolbar_shadow" />
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+          </FrameLayout>
 
-                        <design.shapeshifter.nestedscrolling.MaxHeightRecyclerView
-                            android:id="@+id/card_recyclerview"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+        </LinearLayout>
+      </android.support.v7.widget.CardView>
 
-                        <View
-                            android:id="@+id/card_header_shadow"
-                            android:layout_width="match_parent"
-                            android:layout_height="6dp"
-                            android:alpha="0"
-                            android:background="@drawable/toolbar_shadow"/>
+      <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="top|end"
+        android:layout_marginEnd="24dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:srcCompat="@drawable/ic_share_white" />
 
-                    </FrameLayout>
+    </FrameLayout>
 
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_gravity="top|end"
-                android:clickable="true"
-                app:srcCompat="@drawable/ic_share_white"/>
-
-        </FrameLayout>
-
-    </design.shapeshifter.nestedscrolling.CustomNestedScrollView2>
+  </design.shapeshifter.nestedscrolling.CustomNestedScrollView2>
 
 </android.support.design.widget.CoordinatorLayout>
