--- a/app/src/main/res/drawable/ic_share_white.xml
+++ b/app/src/main/res/drawable/ic_share_white.xml
@@ -1,19 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24">
-
-    <path
-        android:pathData="M0,0 L24,0 L24,24 L0,24 Z" />
-    <path
-        android:fillColor="#ffffff"
-        android:pathData="M18,16.08 C17.24,16.08,16.56,16.38,16.04,16.85 L8.91,12.7
-C8.96,12.47,9,12.24,9,12 S8.96,11.53,8.91,11.3 L15.96,7.19
-C16.5,7.69,17.21,8,18,8 C19.66,8,21,6.66,21,5 S19.66,2,18,2 S15,3.34,15,5
-C15,5.24,15.04,5.47,15.09,5.7 L8.04,9.81 C7.5,9.31,6.79,9,6,9
-C4.34,9,3,10.34,3,12 S4.34,15,6,15 C6.79,15,7.5,14.69,8.04,14.19 L15.16,18.35
-C15.11,18.56,15.08,18.78,15.08,19 C15.08,20.61,16.39,21.92,18,21.92
-C19.61,21.92,20.92,20.61,20.92,19 S19.61,16.08,18,16.08 Z" />
+  android:width="24dp"
+  android:height="24dp"
+  android:viewportHeight="24"
+  android:viewportWidth="24">
+  <path
+    android:fillColor="#ffffff"
+    android:pathData="M18 16.08c-0.76 0-1.44 0.3-1.96 0.77L8.91 12.7c 0.05-0.23 0.09-0.46 0.09-0.7s-0.04-0.47-0.09-0.7l7.05-4.11c0.54 0.5 1.25 0.81 2.04 0.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 0.24 0.04 0.47 0.09 0.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c0.79 0 1.5-0.31 2.04-0.81l7.12 4.16c-0.05 0.21-0.08 0.43-0.08 0.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z" />
 </vector>
